# inf3995-devops

./: .github-actions.yml  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  push-all.sh  sample_compile_script.sh
1-git/: README.md
2-cmake/: README.md  compile.sh
2-cmake/lib/: CMakeLists.txt
2-cmake/projects/: CMakeLists.txt
2-cmake/projects/client/: CMakeLists.txt
2-cmake/projects/server/: CMakeLists.txt
2-cmake/src/: CMakeLists.txt
2-cmake/src/services/: ExampleService.cpp
2-cmake/test/: CMakeLists.txt  ExampleServiceTest.cpp
3-ci/: README.md
3-ci/builder/: Dockerfile
3-ci/ci/: Dockerfile
4-cd/: .rsync-filter  README.md  playbook.yml
4-cd/group_vars/all/: common.yml
4-cd/roles/setup/tasks/: build_target.yml  copy_project_files.yml  main.yml  run_target.yml
builder/: Dockerfile
ci/: Dockerfile
demo-cpp/: .gitignore  CMakeLists.txt
demo-cpp/projects/: main2.cpp
demo-cpp/src/: CMakeLists.txt
demo-cpp/src/services/: ExampleService.hpp
demo-cpp/test/: CMakeLists.txt
hooks/: install.sh
